samples/_failures_safe/1761160288_7ec0ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f48c3105.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_f48c3105.c:125:12: error: missing terminating " character
  125 |     printf("WARNING entries: %d\n
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f48c3105.c:125:5: error: expected expression at end of input
  125 |     printf("WARNING entries: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_f48c3105.c:125:5: error: expected declaration or statement at end of input
